--- a/detection.html
+++ b/detection.html
@@ -216,7 +216,7 @@
   </center>
   
   <footer class="foot">
-      <center><p>Copyright &copy;2019<br>Developed By <a href="https://fb.com/ashadullah.shawon">Ashadullah Shawon</a></p></center>
+      <center><p>Copyright &copy;2019<br>Developed By <a href="https://www.facebook.com/shivam.srivastav.568632">Srivastav</a></p></center>
   </footer>
 
 </body>
